# ide

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.claude/: settings.json
.cursor/plans/: agent-agnostic_bon_support_e7731b5c.plan.md  complete_tapp_runtime_fix_55a56d72.plan.md  tapp_extension_system_782699a9.plan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: worktree-limitations.md
docs/research/: app-extension-system.md
docs/research/plans/: 00-overview.md  01-wit-host-imports.md  02-storage-bridge.md  03-filesystem-api.md  04-network-bridge.md  05-editor-awareness.md  06-agent-inject.md  07-agent-spawn.md  08-missing-ui-components.md  09-typescript-sdk.md  (+2 more)
docs/tapp/: README.md  agent-integration.md  api-reference.md  app-store.md  development.md  installation.md  manifest-reference.md  publishing.md  quick-start.md  ui-components.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mcp.rs
src-tauri/src/apps/: agent_bridge.rs  commands.rs  error.rs  hooks.rs  ipc.rs  manager.rs  manifest.rs  mod.rs  network.rs  permissions.rs  registry.rs  storage.rs  store.rs  tools.rs  ui_types.rs
src-tauri/src/commands/: agent.rs  checkpoint.rs  fs.rs  git.rs  logs.rs  lsp.rs  mod.rs  providers.rs  search.rs  settings.rs  terminal.rs  tyck.rs  worktree.rs
src-tauri/src/wasm/: host.rs  instance.rs  limits.rs  mod.rs  sandbox.rs
src/lib/: diagnostics.ts  keybindings.ts  log.ts
src/routes/: +page.svelte
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  main.tsx
(+118 files in other folders)
