[package]
name = "tyck"
version = "0.1.0"
description = "An agent agnostic editor"
authors = ["Tyck Contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/tyck-ai/ide"
keywords = ["editor", "ide", "ai", "tauri", "wasm"]
categories = ["development-tools", "text-editors"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tyck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
portable-pty = "0.8"
notify = "7"
notify-debouncer-mini = "0.5"
chrono = { version = "0.4", features = ["serde"] }

# WASM Runtime (Tapp Extension System)
wasmtime = { version = "29", features = ["component-model"] }
wasmtime-wasi = "29"

# Storage for apps
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"

# UUID for app instances
uuid = { version = "1", features = ["v4"] }

# TLS for HTTPS in app network requests
native-tls = "0.2"

# Cryptographic hashing for package signing
sha2 = "0.10"

